# pyproject-euler-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: playwright-submit-decision.md  site-notes.md
docs/superpowers/plans/: 2026-04-23-euler-cli.md
docs/superpowers/specs/: 2026-04-23-euler-cli-design.md
euler/: auth.py  cli.py  config.py  problem.py  session.py  status.py  submit.py
tests/: test_auth.py  test_cli.py  test_config.py  test_problem.py  test_session.py  test_status.py  test_submit.py
