[project]
name = "euler-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "keyring>=24.0",
    "rich>=13.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
euler = "euler.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
